brat/test/golden/kernel/deleteSnd.brat.golden
Error in deleteSnd (test/golden/kernel/deleteSnd.brat)@FC {start = Pos {line = 2, col = 13}, end = Pos {line = 2, col = 29}}:
deleteSnd = { q0, q1 => q0 }
            ^^^^^^^^^^^^^^^^

  Type error: Variable(s) q1 haven't been used

